Code cleanup (IntelliJ inspections)
Various code cleanup from IntelliJ inspections.

Closes #1013